--- a/src/components/FileUpload/style.css
+++ b/src/components/FileUpload/style.css
@@ -4,3 +4,10 @@
   border-radius: 8px;
   color: #888;
 }
+
+.pink-border {
+  border-color: rgba(255, 99, 132, 0.5);
+}
+.blue-border {
+  border-color: rgba(53, 162, 235, 0.5);
+}
