--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,10 @@
   text-align: center;
 }
 
-.uploads-container {
+.container-upload {
   margin: 2rem;
+  gap: 2rem;
   display: flex;
   flex-direction: row;
-  gap: 2rem;
-}
-
-.read-the-docs {
-  color: #888;
+  width: 700px;
 }
