--- a/src/components/FileUpload/style.css
+++ b/src/components/FileUpload/style.css
@@ -1,13 +1,21 @@
 .container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
   border: 2px dashed #333;
   padding: 2rem;
   border-radius: 8px;
   color: #888;
+  height: 120px;
 }
 
 .pink-border {
   border-color: rgba(255, 99, 132, 0.5);
 }
+
 .blue-border {
   border-color: rgba(53, 162, 235, 0.5);
 }
