--- a/src/components/FileUpload/style.css
+++ b/src/components/FileUpload/style.css
@@ -12,10 +12,6 @@
   height: 120px;
 }
 
-.pink-border {
-  border-color: rgba(255, 99, 132, 0.5);
-}
-
-.blue-border {
-  border-color: rgba(53, 162, 235, 0.5);
+.white-border {
+  border: 2px solid #444;
 }
